@@ -9,6 +9,7 @@
     <version>development-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <selenide.version>5.14.2</selenide.version>
@@ -69,6 +70,7 @@
                     </systemPropertyVariables>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+                        --enable-preview
                     </argLine>
                 </configuration>
                 <dependencies>
